<resources>
    <string name="app_name">健康知因</string>

    <string name="tab_home">首页</string>
    <string name="tab_forum">论坛</string>
    <string name="tab_find">发现</string>
    <string name="tab_shopping_cart">购物车</string>
    <string name="tab_mine">我的</string>

    <!--登录界面-->
    <string name="hint_username">请输入帐号</string>
    <string name="hint_password">请输入密码</string>
    <string name="label_auto_login">自动登录</string>
    <string name="label_fast_login">快速登录</string>
    <string name="label_wechat_login">微信</string>
    <string name="label_sina_login">微博</string>
    <string name="label_qq_login">QQ</string>
    <string name="btn_login">登&#160;&#160;录</string>
    <string name="btn_register"><Data><![CDATA[<u>注册帐号</u>]]></Data></string>

    <!--注册页面-->
    <string name="label_username">用&#160;&#160;户&#160;&#160;名:</string>
    <string name="error_phone">请输入有效手机号</string>
    <string name="label_authentication_phone_code">验&#160;&#160;证&#160;&#160;码:</string>
    <string name="hint_authentication_phone_code">请输入验证码</string>
    <string name="btn_authentication_get_phone_code">获取验证码</string>
    <string name="btn_authentication_new_phone_code">重新获取(%1$s)</string>
    <string name="label_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="label_new_password">新&#160;&#160;密&#160;&#160;码:</string>
    <string name="label_nickname">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称:</string>
    <string name="label_head">头&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;像:</string>
    <string name="label_sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别:</string>
    <string name="label_birth">出生日期:</string>
    <string name="hint_nickname">请输入昵称</string>
    <string name="hint_birth">请选择出生日期</string>
    <string name="label_confirm_password">确认密码:</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="label_declare"><Data><![CDATA[<u>免责声明</u>]]></Data></string>
    <string name="label_reading">已阅</string>
    <string name="btn_confirm_register">确认注册</string>
    <string name="btn_confirm_reset">确认修改</string>
    <string name="label_has_username">已有帐号?</string>
    <string name="label_back_login"><Data><![CDATA[<u>返回登录</u>]]></Data></string>

    <!--修改密码-->
    <string name="title_chage_password">修改密码</string>

    <!--论坛-->
    <string name="btn_delete">删除</string>
    <string name="title_reprot">帖子举报</string>
    <string name="title_block_introduce">板块资料</string>
    <string name="format_main_count">主帖:%1$s</string>
    <string name="format_reply_count">回帖:%1$s</string>
    <string name="format_read_num">%1$s/%2$s</string>
    <string name="format_floor">%1$s楼</string>
    <string name="title_release_post">发布帖子</string>
    <string name="btn_release_post">发布</string>
    <!--商品-->
    <string name="format_order_number">订单号:%1$s</string>
    <string name="format_order_time">下单时间:%1$s</string>
    <string name="format_price">￥%1$s</string>
    <string name="format_count">x%1$s</string>
    <string name="format_evaluate_count">%1$s条评价</string>
    <string name="format_evaluate_counts">评价(%1$s)</string>
    <string name="format_good_rate">好评%1$s</string>
    <string name="format_reply">客服回复:%1$s</string>
    <string name="format_total_price">合计:￥%1$s</string>
    <string name="format_all_price">总额:￥%1$s</string>
    <string name="format_product_count">共%1$s件商品</string>
    <string name="format_real_pay">实付款:￥%1$s</string>
    <string name="toast_product_empty">您尚未选择商品</string>

    <!--提示信息-->
    <string name="toast_password_confirm">两次密码不一致</string>
    <string name="toast_password_chiness">密码不能为中文</string>
    <string name="toast_agree_protocol">请阅读协议</string>

    <string name="test_string">测试字符</string>
    <string name="title_home">基因之家</string>
    <string name="title_left_scanning">扫一扫</string>
    <string name="title_right_message">消息</string>
    <string name="tab_gene">基因</string>
    <string name="tab_insurance">保险</string>
    <string name="tab_examination">体检</string>
    <string name="tab_famous_doctor">名医</string>
    <string name="tab_drug">靶向药</string>
    <string name="title_find">精准发现</string>
    <string name="btn_login_regist">登录/注册</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_right_btn_edit">编辑</string>
    <string name="title_right_btn_complete">完成</string>
    <string name="title_conform_order">确认订单</string>
    <string name="title_reset_password">重置密码</string>
    <string name="title_mine_fragment">我的</string>
    <string name="toast_img_error">图片信息错误,请重试</string>
    <string name="error_zip_error">压缩异常请重试</string>
    <string name="empty_zip_error">请上传图片信息</string>
    <string name="title_wait_pay_order">待付款</string>
    <string name="title_aready_pay_order">已付款</string>
    <string name="title_mine_forum">发布的帖子</string>
    <string name="title_mine_store">我的收藏</string>
    <string name="title_right_store">收藏</string>
    <string name="toast_evaluate_empty">请输入评价内容</string>
    <string name="title_mine_info">个人信息</string>
    <string name="title_order_detail">订单详情</string>
    <string name="toast_store_success">收藏成功</string>
    <string name="toast_unstore_success">取消收藏成功</string>
    <string name="string_store">收藏</string>
    <string name="string_aready_store">已收藏</string>
    <string name="string_history">最近访问</string>
    <string name="toast_attention_success">关注成功</string>
    <string name="title_mine_attention">我的关注</string>
    <string name="string_attention">关注</string>
    <string name="string_aready_attention">已关注</string>
    <string name="notice_data_empty">暂无数据</string>
    <string name="notice_cellect_empty">暂无收藏</string>
    <string name="notice_cellect_classify">暂无商品</string>
    <string name="notice_history_empty">暂无最近访问</string>
    <string name="notice_shoppingcart_empty">购物车空空如也</string>
    <string name="notice_attention_self">不能关注自己</string>
    <string name="toast_report_content">请填写举报原因</string>
    <string name="toast_report_success">举报成功</string>
    <string name="toast_evaluate_success">评价成功</string>
    <string name="title_evaluate_order">评价晒单</string>
    <string name="title_perfect_regist">绑定手机号</string>
    <string name="toast_release_success">发布成功</string>
</resources>
